tests/Rules/Media/Fixtures/invalid/svg_role_img_no_title.html.twig
{# 1 errors #}
<svg role="img"><rect width="10" height="10"></rect></svg>
